--- a/ArtifexGen/templates/web_client.html
+++ b/ArtifexGen/templates/web_client.html
@@ -14,7 +14,7 @@
   </head>
   <body class="bg-secondary bg-gradient">
     <div class="container-fluid">
-      <form class="form">
+      <form id="form-artifexgen" class="form">
         <div class="card card-primary mt-5">
           <div class="card-header text-white bg-primary bg-gradient text-center">
             Artifex Gen
@@ -23,25 +23,25 @@
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group mt-2 ">
                 <label for="prompt">Prompt:</label>
-                <input id="prompt" type="text" class="form-control" length="200">
+                <input id="prompt" name="prompt" type="text" class="form-control" length="200" required>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group mt-2">
                 <label for="negative_prompt">Negative Prompt:</label>
-                <input id="negative_prompt" type="text" class="form-control" length="200">
+                <input id="negative_prompt" name="negative_prompt" type="text" class="form-control" length="200" required>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group mt-2">
                 <label for="number_images" class="form-label">Number of Images</label>
-                <input id="number_images" type="range" min="1" max="3" value="1" class="form-range" oninput="this.nextElementSibling.value = '('+this.value+' to '+this.max+')'">
+                <input id="number_images" name="number_images" type="range" min="1" max="3" value="1" class="form-range" oninput="this.nextElementSibling.value = '('+this.value+' to '+this.max+')'" required>
                 <output class="form-text text-muted">(1 to 3)</output>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group mt-2">
                 <label for="inference_steps" class="form-label">Inference Steps</label>
-                <input id="inference_steps" type="range" min="1" max="500" value="25" class="form-range" oninput="this.nextElementSibling.value = '('+this.value+' to '+this.max+')'">
+                <input id="inference_steps" name="inference_steps" type="range" min="1" max="500" value="25" class="form-range" oninput="this.nextElementSibling.value = '('+this.value+' to '+this.max+')'" required>
                 <output class="form-text text-muted">(25 to 500)</output>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group mt-2">
                 <label for="height">Height:</label>
-                <select id="height" class="form-select">
+                <select id="height" name="height" class="form-select" required>
                   <option value="256">256 px</option>
                   <option value="512">512 px</option>
                   <option value="1024">1024 px</option>
@@ -50,7 +50,7 @@
               </div>
               <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group mt-2">
                 <label for="width">Width:</label>
-                <select id="width" class="form-select">
+                <select id="width" name="width" class="form-select" required>
                   <option value="256">256 px</option>
                   <option value="512">512 px</option>
                   <option value="1024">1024 px</option>
@@ -59,13 +59,13 @@
               </div>
               <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group mt-2">
                 <label for="seed">Seed:</label>
-                <input id="seed" type="number" min="1" value="1" class="form-control">
+                <input id="seed" name="seed" type="number" min="1" value="1" class="form-control" required>
                 <small class="form-text text-muted">Any integer</small>
               </div>
             </div>
           </div>
           <div class="card-footer text-center">
-              <button class="btn btn-primary" id="btn-generate" type="button" onClick="goGenerate();">
+              <button class="btn btn-primary" id="btn-generate" type="button" onClick="goGenerate($('#form-artifexgen'));">
                   <i class="bi bi-arrow-right-circle-fill"></i> Generate
               </button>
           </div>
@@ -77,9 +77,8 @@
           Output
         </div>
         <div class="card-body">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group mt-2 ">
-            </div>
+          <div class="row" id="output-container">
+            <!-- target to image widget's renderize -->
           </div>
         </div>
       </div>
@@ -87,11 +86,30 @@
 
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+    <!-- Form validate -->
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
+    <script>
+      jQuery.validator.setDefaults({
+        debug: true,
+        success: "valid",
+        errorElement: 'div',
+        errorPlacement: function (error, element) {
+            error.addClass('text-danger');
+            element.parent().append(error);
+        },
+        highlight: function (element, errorClass, validClass) {
+            $(element).addClass('text-danger');
+        },
+        unhighlight: function (element, errorClass, validClass) {
+            $(element).removeClass('text-danger').addClass('text-success');
+        }
+      });
+    </script>
+
     <!-- Custom JavaScript -->
-    
+    <script type = "text/javascript" src = "{{ url_for('static', filename = 'js/artifexgen.js') }}" ></script>
   </body>
 </html>
